Fixed add to cart button in product details on mobile

--- a/frontend/src/components/ProductDetails/ProductDetails.css
+++ b/frontend/src/components/ProductDetails/ProductDetails.css
@@ -113,6 +113,6 @@
   .details-price button {
     font-size: 16px;
     height: 30px;
-    width: 100px;
+    width: 120px;
   }
 }
